[project]
name = "commute-leads"
version = "0.1.0"
description = "WhatsApp QR lead tracing on Cloudflare Workers (Python)"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "workers-py",
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
